--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# Compiled class file
+### Java ###
 *.class
-
-# Log file
-*.log
 
 # BlueJ files
 *.ctxt
@@ -13,11 +10,37 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Eclipse Files #
+.settings
+
+
+### Gradle ###
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+/bin/
+
+# VS Code
+.vscode
+
+# Generated projects
+generated/
+
+# Apple
+.DS_Store
+.idea/
+RIP.iml
+androidApps/
