Fixed issues #2(apk by parameter), #3(generate jar with rip2), #4(outputfolder as parameter)

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
     
     task jarjar(type: Jar) {
     manifest {
-        attributes "Main-Class": "main.Rip"
+        attributes "Main-Class": "main.Rip2"
     }
     baseName = 'RIP'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
