--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ generated/
 .idea/
 RIP.iml
 androidApps/
+
+# Eclipse Core      
+.project
+
+# JDT-specific (Eclipse Java Development Tools)     
+.classpath
