--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,13 @@ repositories {
 }
     
     task baseRIP(type: Jar) {
-    manifest {
-        attributes "Main-Class": "main.RIPBase"
+        manifest {
+            attributes "Main-Class": "main.RIPBase"
+        }
+        baseName = 'RIP'
+        from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+        with jar 
     }
-    baseName = 'RIP'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar }
     
     task ripI18N(type: Jar) {
     manifest {
