basic login implemented without full tests (password input couldn't be tested but it has nearly the same code than the user id), isRippingoutside changed, transitions' text saved but not reused in RIPRR

--- a/rip_config.json
+++ b/rip_config.json
@@ -6,6 +6,15 @@
 	"scriptPath":"./test/outputt/result.json",
 	"executionParams":{
 		"events":20,
-		"time":2
-	}
+		"time":2,
+		"userLogin": true,
+		"loginData":{
+			"activityName": "",
+			"userIDNode":"",
+			"userIDImput":"",
+			"passwordIDNode":"",
+			"passwordImput":""
+		}
+	},
+	
 }
