--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,12 @@ dependencies {
     compile group: 'org.eclipse.jetty', name:'jetty-server', version: '9.2.3.v20140905'
     compile group: 'org.eclipse.jetty', name:'jetty-servlet', version: '9.2.3.v20140905'
     compile group: 'me.tongfei', name:'progressbar', version: '0.5.5'
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	compile group: 'me.tongfei', name: 'progressbar', version: '0.6.0'
+	compile 'commons-io:commons-io:2.11.0'
+//Thanks for using https://jar-download.com
+	
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
